# rust-twobit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: foo.2bit.ORIGIN  foo.fasta
benches/: bench.rs
src/: block.rs  counts.rs  error.rs  lib.rs  nucleotide.rs  quad.rs  reader.rs  types.rs  value_reader.rs
src/convert/: fasta.rs  mod.rs
tests/: fasta.rs
