[package]
name = "twobit"
version = "0.1.2"
authors = ["joern <joern@localhost>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jbethune/rust-twobit/"
license = "MIT"
keywords = [ "sequence", "gene", "genome", "twobit" ]
description = "Pure Rust implementation of the TwoBit sequence file format"
documentation = "https://docs.rs/twobit/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
